2013-05-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/util/ipmi-timestamp-util.h,
	libfreeipmi/util/ipmi-timestamp-util.c (ipmi_timestamp_string):
	Support specific UTC offset being specified.

	* ipmi-fru/, bmc-device/, ipmi-sel/, ipmi-sensors/, ipmi-dcmi/,
	ipmi-oem/: Support new --utc-offset option.

	* common/toolcommon/: Support new options and config file options
	appropriately.

	* man/: Update for new option.

2013-05-07  Albert Chu <chu11@llnl.gov>

	Merge branch 'utcoffsetcmd'

	* libfreeipmi/util/ipmi-timestamp-util.c (ipmi_timestamp_string):
	Make default output unconverted.

	* libfreeipmi/util/ipmi-timestamp-util.c (ipmi_timestamp_string):
	Support UTC_TO_LOCALTIME and LOCALTIME_TO_UTC flag to allow user
	to specify if time is actually UTC.

	* ipmi-fru/, bmc-device/, ipmi-sel/, ipmi-sensors/, ipmi-dcmi/,
	ipmi-oem/: Support new --utc-to-localtime and --localtime-to-utc
	options.
	
	* common/toolcommon/: Support new options and config file options
	appropriately.

	* man/: Update for new options.

2013-05-06  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Get SEL Time UTC Offset and Set SEL Time UTC
	Offset payloads.

	* bmc-device/: Support --get-sel-time-utc-offset and
	-set-sel-time-utc-offset.

2013-05-06 Peter Volkov <pva@gentoo.org>

	* configure.ac: Update for autoconf 1.14. 
	
2013-05-03  Albert Chu <chu11@llnl.gov>

	Merge 9651:9663 branch 'ddr3'
	
	Add support to interpret DDR3 SDRAM memory modules

	* libfreeipmi/include/freeipmi/record-format/ipmi-fru-dimmspd-record-format.h,
	libfreeipmi/record-format/ipmi-fru-dimmspd-record-format.c,
	libfreeipmi/include/freeipmi/templates/ipmi-fru-dimmspd-record-format-templates.h:
	New files.

	* libfreeipmi/include/freeipmi/spec/ipmi-jedec-manufacturer-identifcation-code-spec.h,
	libfreeipmi/spec/ipmi-jedec-manufacturer-identifcation-code-spec.c,
	libfreeipmi/include/freeipmi/util/ipmi-jedec-manufacturer-identifcation-code-util.h,