@@ -106,7 +106,7 @@ FIID Template: tmpl_fru_dimm_spd_ddr3_record
     { 8, "minimum_sdram_cycle_time", REQUIRED, LENGTH-FIXED }
     { 8, "reserved7", REQUIRED, LENGTH-FIXED }
     /* Byte 14-15: CAS Latencies Supported */
-    { 16, "", REQUIRED, LENGTH-FIXED }
+    { 16, "cas_latencies_supported", REQUIRED, LENGTH-FIXED }
     /* Byte 16: Minimum CAS Latency Time (t_aa min) (MTB Units) */
     { 8, "minimum_sdram_cas_latency_time", REQUIRED, LENGTH-FIXED }
     /* Byte 17: Minimum Write Recovery Time (t_wr min) (MTB Units) */
@@ -125,7 +125,7 @@ FIID Template: tmpl_fru_dimm_spd_ddr3_record
     /* Byte 23: Minimum Active to Active/Refresh Delay Time (t_rc min), LSB (MTB Units) */
     { 8, "minimum_active_to_active_refresh_time", REQUIRED, LENGTH-FIXED }
     /* Byte 24-25: Minimum Refresh Recovery Delay Time (t_rfc min) (MTB Units) */
-    { 16, "", REQUIRED, LENGTH-FIXED }
+    { 16, "minimum_active_to_active_refresh_time", REQUIRED, LENGTH-FIXED }
     /* Byte 26: Minimum Internal Write to Read Command Delay Time (t_wtr min) (MTB Units) */
     { 8, "internal_write_to_read_delay_time", REQUIRED, LENGTH-FIXED }
     /* Byte 27: Minimum Internal Read to Precharge Command Delay Time (t_rtp min) (MTB Units) */
